# telegrab

./: .gitignore  LICENSE  README.md  landing.html  run.py
.github/workflows/: release.yml
assets/icons/: app.icns
backend/: check_style.py  pyproject.toml  requirements.txt  test_maximize.py
backend/telegrab/: __init__.py  __main__.py  app.py
backend/telegrab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/telegrab/api/: __init__.py  bridge.py  errors.py  host.py  rest.py  streaming.py
backend/telegrab/config/: __init__.py  api_settings.py  paths.py  stream.py
backend/telegrab/infra/: __init__.py  bandwidth.py  events.py  logger.py  runtime.py  single_instance.py  store.py
backend/telegrab/services/: __init__.py  api_settings.py  auth.py  cache.py  dedup.py  files.py  folders.py  network.py  pins.py  preview.py  tray.py  updater.py  vault.py
backend/telegrab/telegram/: __init__.py  client.py  fast_transfer.py  media.py  peers.py
backend/tests/: test_bridge_safe_call.py  test_core.py  test_errors.py  test_logger.py  test_network.py  test_retry_with_backoff.py  test_runtime_recovery.py  test_store.py  test_store_permissions.py  test_streaming_hardening.py  test_streaming_stale.py  test_transfer_reliability.py  test_updater_checksum_timeout.py  test_updater_url_validation.py  test_vault_security.py
backend/tg_drive/: __init__.py  __main__.py  app.py
backend/tg_drive/api/: bridge.py  host.py  rest.py  streaming.py
backend/tg_drive/config/: __init__.py  api_settings.py  paths.py  stream.py
backend/tg_drive/infra/: events.py
backend/tg_drive/services/: __init__.py  api_settings.py  auth.py  files.py  folders.py  preview.py
backend/tg_drive/telegram/: __init__.py  client.py  errors.py  media.py  peers.py  transfers.py
frontend/: .prettierignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: AuthWizard.tsx  Dashboard.tsx  ErrorBoundary.tsx  FileTypeIcon.tsx  OfflineBanner.tsx  SectionErrorBoundary.tsx  ThemeToggle.tsx  TitleBar.tsx  UpdateBanner.tsx
frontend/src/components/dashboard/: BandwidthWidget.tsx  CommandPalette.tsx  ContextMenu.tsx  DownloadQueue.tsx  DragDropOverlay.tsx  EmptyState.tsx  ExternalDropBlocker.tsx  FileCard.tsx  FileExplorer.tsx  FileListItem.tsx  MediaPlayer.tsx  MiniPlayer.tsx  MoveToFolderModal.tsx  PdfViewer.tsx  PreviewModal.tsx  QuickAccess.tsx  SettingsModal.tsx  (+6 more)
frontend/src/contexts/: ConfirmContext.tsx  DropZoneContext.tsx  SettingsContext.tsx  UpdateContext.tsx
frontend/src/hooks/: useDashboardPreview.ts  useDashboardSelection.ts  useDuplicateCheck.ts  useFileDownload.ts  useFileDrop.ts  useFileOperations.ts  useFileUpload.ts  useKeyboardShortcuts.ts  useNetworkStatus.ts  useSearch.ts  useTelegramConnection.ts  useUpdateCheck.ts
frontend/src/lib/: api.ts  cn.ts  errorReporter.ts  utils.ts  version.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
installer/: build.py  generate_icon.py  telegrab.spec  telegrab_setup.iss  tg_drive.spec
scripts/: bump_version.py
website/: index.html  package-lock.json  package.json
website/src/: App.tsx  index.css
website/src/components/: Footer.tsx  Navbar.tsx
website/src/hooks/: useDownloadUrl.ts
website/src/pages/: Docs.tsx  Home.tsx
(+25 files in other folders)
