[project]
name = "telegrab"
version = "1.4.0"
description = "Fast, secure Telegram-based cloud storage powered by telegrab."
requires-python = ">=3.11"
authors = [{ name = "Telegram Drive" }]
license = { text = "MIT" }
dependencies = [
    "pywebview==5.3.2",
    "telethon==1.36.0",
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "aiofiles==24.1.0",
    "python-multipart==0.0.18",
]

[dependency-groups]
dev = [
    "pyinstaller==6.11.1",
    "ruff==0.9.9",
]

[project.scripts]
telegrab = "telegrab.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["telegrab*"]
