[project]
name = "telegrab"
version = "1.4.0"
description = "Fast, secure Telegram-based cloud storage powered by telegrab."
requires-python = ">=3.11"
authors = [{ name = "Telegram Drive" }]
license = { text = "MIT" }
dependencies = [
    "pywebview==5.3.2",
    "telethon==1.36.0",
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "aiofiles==24.1.0",
    "python-multipart==0.0.18",
    "pystray==0.19.5",
    "Pillow==10.4.0",
    "cryptography==43.0.0",
    "pythonnet==3.0.4; sys_platform == 'win32'",
    "pyobjc-core==10.3.1; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa==10.3.1; sys_platform == 'darwin'",
    "pyobjc-framework-WebKit==10.3.1; sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "pyinstaller==6.11.1",
    "ruff==0.9.9",
    "black==24.10.0",
]

[project.scripts]
telegrab = "telegrab.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["telegrab*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "PTH", "RET", "T20"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 88
target-version = ["py312"]
